# internal/entrypoints/api/auth/handler.go
@@ -1,22 +1,23 @@
 package auth
 
 import (
-	"crypto/subtle"
 	"encoding/json"
 	"errors"
-	"nbox/internal/application"
-	"nbox/internal/entrypoints/api/response"
+	"go.uber.org/zap"
+	"nbox/internal/domain"
 	"net/http"
-	"os"
 	"time"
 
+	"github.com/norlis/httpgate/pkg/adapter/apidriven/presenters"
+
 	"github.com/golang-jwt/jwt/v5"
+	_ "github.com/norlis/httpgate/pkg/kit/problem"
 )
 
-//var secretKey = []byte("5e78e2ff5f63245c2ebd078b89eaf84085e378b0d24bcc927291b0fcc66baffc")
-
 type Claims struct {
-	Username string `json:"username"`
+	Username string   `json:"username"`
+	Name     string   `json:"name"`
+	Roles    []string `json:"roles"`
 	jwt.RegisteredClaims
 }
 
@@ -36,54 +37,49 @@ type TokenRequest struct {
 // @Failure 401 {object} problem.ProblemDetail "Unauthorized"
 // @Failure 500 {object} problem.ProblemDetail "Internal error"
 // @Router /api/auth/token [post]
-func (a Authn) TokenHandler(w http.ResponseWriter, r *http.Request) {
-	credentials := map[string]string{}
-	err := json.Unmarshal([]byte(os.Getenv(application.PrefixBasicAuthCredentials)), &credentials)
-	if err != nil {
-		response.Error(w, r, err, http.StatusBadRequest)
-		return
+func (a Authn) TokenHandler() http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+
+		payload := &TokenRequest{}
+
+		if err := json.NewDecoder(r.Body).Decode(payload); err != nil {
+			a.render.Error(w, r, err, presenters.WithStatus(http.StatusBadRequest))
+			return
+		}
+
+		user, err := a.repository.ValidatePassword(r.Context(), payload.Username, payload.Password)
+		if err != nil {
+			a.logger.Error("ErrValidatePassword", zap.Error(err))
+			if errors.Is(err, domain.ErrUserNotFound) || errors.Is(err, domain.ErrInvalidPassword) {
+				a.render.Error(w, r, ErrInvalidCredentials, presenters.WithStatus(http.StatusBadRequest))
+				return
+			}
+
+			a.render.Error(w, r, err, presenters.WithStatus(http.StatusBadRequest))
+			return
+		}
+
+		expirationTime := time.Now().Add(24 * time.Hour)
+		now := time.Now()
+		claims := &Claims{
+			Username: user.Username,
+			Name:     user.Username,
+			Roles:    user.Roles,
+			RegisteredClaims: jwt.RegisteredClaims{
+				ExpiresAt: jwt.NewNumericDate(expirationTime),
+				IssuedAt:  jwt.NewNumericDate(now),
+				NotBefore: jwt.NewNumericDate(now),
+			},
+		}
+
+		token := jwt.NewWithClaims(jwt.SigningMethodHS256, claims)
+
+		tokenString, err := token.SignedString(a.config.HmacSecretKey)
+		if err != nil {
+			a.render.Error(w, r, err, presenters.WithStatus(http.StatusInternalServerError))
+			return
+		}
+
+		a.render.JSON(w, r, map[string]string{"token": tokenString})
 	}
-
-	payload := &TokenRequest{}
-
-	if err := json.NewDecoder(r.Body).Decode(payload); err != nil {
-		response.Error(w, r, err, http.StatusBadRequest)
-		return
-	}
-
-	credPass, credUserOk := credentials[payload.Username]
-	if !credUserOk || subtle.ConstantTimeCompare([]byte(payload.Password), []byte(credPass)) != 1 {
-		response.Error(w, r, errors.New("invalid credentials"), http.StatusUnauthorized)
-		return
-	}
-
-	expirationTime := time.Now().Add(24 * time.Hour)
-	now := time.Now()
-	claims := &Claims{
-		Username: payload.Username,
-		RegisteredClaims: jwt.RegisteredClaims{
-			ExpiresAt: jwt.NewNumericDate(expirationTime),
-			IssuedAt:  jwt.NewNumericDate(now),
-			NotBefore: jwt.NewNumericDate(now),
-		},
-	}
-
-	// Crear el token JWT
-	token := jwt.NewWithClaims(jwt.SigningMethodHS256, claims)
-	//token := jwt.NewWithClaims(jwt.SigningMethodHS256, jwt.MapClaims{
-	//	"username": payload.Username,
-	//	"exp":      time.Now().Add(time.Hour * 24).Unix(),
-	//	"iat":      time.Now().Unix(),
-	//	"nbf":      time.Now().Unix(),
-	//})
-
-	// Firmar el token con la clave secreta
-	tokenString, err := token.SignedString(a.config.HmacSecretKey)
-	if err != nil {
-		//http.Error(w, "Error generating token", http.StatusInternalServerError)
-		response.Error(w, r, err, http.StatusInternalServerError)
-		return
-	}
-
-	response.Success(w, r, map[string]string{"token": tokenString})
 }
